--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "EmployeeAppCon": "Data Source=.; Initial Catalog=EmployeeDB; Integrated Security= true"
+    "EmployeeAppCon": "Data Source=.\\SQLEXPRESS; Initial Catalog=EmployeeDB; Integrated Security= true"
   },
   "Logging": {
     "LogLevel": {
